src/frontend/style.scss
// WP Pin Master — frontend pin button styles.

@font-face {
	font-family: "PM-Font";
	src: url("../../assets/fonts/pm-font.woff2") format("woff2"),
		url("../../assets/fonts/pm-font.woff") format("woff"),
		url("../../assets/fonts/pm-font.ttf") format("truetype");
	font-weight: normal;
	font-style: normal;
	font-display: block;
}

[class^="pm-icon-"],
[class*=" pm-icon-"] {
	&::before,
	&::after {
		font-family: PM-Font;
		font-size: 20px;
		font-style: normal;
	}
}

a.pm-button.default {
	[class*=" pm-icon-"],
	[class^="pm-icon-"] {
		color: #fff;
		display: block;

		&:hover {
			color: #fff;
		}

		&::before {
			display: block;
			position: absolute;
			top: 50%;
			left: 50%;
		}
	}
}

.pm-icon-pinterest-2::before { content: "\f100"; }
.pm-icon-pinterest-logo::before { content: "\f101"; }
.pm-icon-pinterest-4::before { content: "\f102"; }
.pm-icon-pinterest-5::before { content: "\f103"; }
.pm-icon-pinterest-sketched-logo::before { content: "\f104"; }
.pm-icon-pinterest-logo-1::before { content: "\f105"; }
.pm-icon-pinterest-drawn-logo::before { content: "\f106"; }
.pm-icon-pin::before { content: "\f107"; }
.pm-icon-push-pin-2::before { content: "\f108"; }
.pm-icon-push-pin-3::before { content: "\f109"; }
.pm-icon-pin-1::before { content: "\f10a"; }
.pm-icon-pin-2::before { content: "\f10b"; }
.pm-icon-pinterest-7::before { content: "\f10c"; }
.pm-icon-pinterest-logotype-circle::before { content: "\f10d"; }
.pm-icon-pinterest-9::before { content: "\f10e"; }
.pm-icon-pinterest-8::before { content: "\f10f"; }
.pm-icon-pinterest-13::before { content: "\f110"; }
.pm-icon-pinterest-15::before { content: "\f111"; }
.pm-icon-pinterest-social-visual-website-logotype::before { content: "\f112"; }
.pm-icon-pinterest-16::before { content: "\f113"; }
.pm-icon-pinterest-18::before { content: "\f114"; }
.pm-icon-pinterest-23::before { content: "\f115"; }
.pm-icon-pinterest-24::before { content: "\f116"; }
.pm-icon-social-media::before { content: "\f117"; }

a.pm-button.custom,
a.pm-button.old_default {
	text-indent: -9999em !important;
	background: transparent !important;

	span {
		display: block;
		background-color: transparent !important;
		background-repeat: no-repeat !important;
		background-position: 0 0 !important;
	}
}

a.pm-button.old_default.pm-button.old_default {
	background: transparent;
	width: 60px;
	height: 30px;
}

a.pm-button.old_default span {
	background-image: url("../../assets/images/pin-old.png") !important;
	background-size: 60px 30px;
	width: 60px;
}

a.pm-button.default {
	display: block;
	overflow: hidden;
	text-decoration: none;
	color: #fff;
	background-color: #bd081c;
	min-width: 40px;
	min-height: 40px;

	span {
		display: contents;
		font-size: 0;
		position: relative;

		&::before {
			content: "\f101";
			font-family: PM-Font !important;
			font-size: 24px;
			margin: 0;
			line-height: 40px;
			text-align: center;
			width: 100%;
		}
	}

	&:hover {
		background-color: #a50718;
	}
}

a.pm-button.default.round,
a.pm-button.icon.pm-icon-round {
	border-radius: 100%;
}

a.pm-button.default.pm-button-rounded-rectangle,
a.pm-button.default.pm-button-rounded-square,
a.pm-button.icon.pm-icon-rounded-rectangle,
a.pm-button.icon.pm-icon-rounded-square {
	border-radius: 5px;
}

a.pm-button.default.pm-button-round {
	border-radius: 50%;
}

span.circle-pm-select-icon {
	display: grid;
	align-items: center;
	text-align: center;
}

a.pm-button.pm-button {
	position: absolute;
	display: none;
	text-decoration: none;
	text-align: center;
	align-items: center;
	justify-items: center;
	background: #e60023;
	color: #fff;
	z-index: 9999;
}

